--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body ng-app="Bargains">
 
-<div ng-include="'partials/navbar.html'" ng-show="$scope.isLoggedIn"></div>
+<div ng-include="'partials/navbar.html'"></div>
 
 <div class="container-fluid">
 	<div class="row">
