making progress with the table and it's functions

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 <script src="/app/controllers/LoginCtrl.js"></script>
 <script src="/app/controllers/HomeCtrl.js"></script>
 <script src="/app/controllers/NavBarCtrl.js"></script>
+<script src="/app/controllers/ProfileCtrl.js"></script>
 
 </body>
 </html>
