--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 <!-- APP FILES -->
 <script src="/app/app.js"></script>
 <script src="/app/values/fbcreds.js"></script>
+<script src="/app/values/mapapi.js"></script>
 
 <!-- FACTORIES -->
 <script src="/app/factories/AuthFactory.js"></script>
