--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
 	<title>Discount Grocery Hunting</title>
 	<link rel="stylesheet" type="text/css" href="/lib/node_modules/bootstrap/dist/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.3/dist/leaflet.css" />
 	<link href="https://fonts.googleapis.com/css?family=Oxygen" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="/css/main.css">
 </head>
@@ -25,6 +27,9 @@
 <script src="/lib/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="/lib/node_modules/firebase/firebase.js"></script>
 
+<!-- LEAFLET MAP FILE -->
+<script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet.js"></script>
+
 <!-- APP FILES -->
 <script src="/app/app.js"></script>
 <script src="/app/values/fbcreds.js"></script>
@@ -41,6 +46,7 @@
 <script src="/app/controllers/HomeCtrl.js"></script>
 <script src="/app/controllers/NavBarCtrl.js"></script>
 <script src="/app/controllers/ProfileCtrl.js"></script>
+<script src="/app/controllers/MapCtrl.js"></script>
 
 </body>
 </html>
