npm installed an angular-leaflet directive that will hopefully help with the map and loading data onto it at the correct times

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 
 <!-- LEAFLET MAP FILE -->
 <script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet.js"></script>
+<script src="/lib/node_modules/angular-leaflet-directive/dist/angular-leaflet-directive.min.js"></script>
 
 <!-- APP FILES -->
 <script src="/app/app.js"></script>
