sloppy looking code, going to clean that up and I had to switch the order of coordinates in my geojson. I think that was giving me trouble

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<title>Discount Grocery Hunting</title>
 	<link rel="stylesheet" type="text/css" href="/lib/node_modules/bootstrap/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.3/dist/leaflet.css" />
+	<link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.31.0/mapbox-gl.css' rel='stylesheet' />
 	<link href="https://fonts.googleapis.com/css?family=Oxygen" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="/css/main.css">
 </head>
@@ -30,6 +31,8 @@
 <!-- LEAFLET MAP FILE -->
 <script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet.js"></script>
 <script src="/lib/node_modules/angular-leaflet-directive/dist/angular-leaflet-directive.min.js"></script>
+<script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.31.0/mapbox-gl.js'></script>
+
 
 <!-- APP FILES -->
 <script src="/app/app.js"></script>
