--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="/lib/node_modules/bootstrap/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.3/dist/leaflet.css" />
 	<link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.31.0/mapbox-gl.css' rel='stylesheet' />
-	<link href="https://fonts.googleapis.com/css?family=Oxygen" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Fira+Sans" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="/css/main.css">
 </head>
 <body ng-app="Bargains">
@@ -28,7 +28,7 @@
 <script src="/lib/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="/lib/node_modules/firebase/firebase.js"></script>
 
-<!-- LEAFLET MAP FILE -->
+<!-- LEAFLET MAP FILES -->
 <script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet.js"></script>
 <script src="/lib/node_modules/angular-leaflet-directive/dist/angular-leaflet-directive.min.js"></script>
 <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.31.0/mapbox-gl.js'></script>
@@ -37,7 +37,6 @@
 <!-- APP FILES -->
 <script src="/app/app.js"></script>
 <script src="/app/values/fbcreds.js"></script>
-<script src="/app/values/mapapi.js"></script>
 
 <!-- FACTORIES -->
 <script src="/app/factories/AuthFactory.js"></script>
@@ -50,7 +49,6 @@
 <script src="/app/controllers/HomeCtrl.js"></script>
 <script src="/app/controllers/NavBarCtrl.js"></script>
 <script src="/app/controllers/ProfileCtrl.js"></script>
-<script src="/app/controllers/MapCtrl.js"></script>
 
 </body>
 </html>
