--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 <script src="/lib/node_modules/jquery/dist/jquery.min.js"></script>
 <script src="/lib/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="/lib/node_modules/firebase/firebase.js"></script>
+<script src="/lib/bower_components/remarkable-bootstrap-notify/dist/bootstrap-notify.min.js"></script>
 
 <!-- LEAFLET MAP FILES -->
 <script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet.js"></script>
